# opencl_exploring

./: Cargo.toml  README.md
src/: main.rs
src/assets/: eigen_val.cl  matrix_ops.cl  scaler_mul.cl
