[package]
name = "opencl"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "opencl"

[[bin]]
path = "src/main.rs"
name = "opencl"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "fat"  # LTO can produce better optimized code; 'false', 'fat', 'thin', or 'off'
codegen-units = 16  # Split crate into units to increase parallelism during compilation, may produce slower code; '1 - 256'
panic = "abort"
incremental = false  # Store cache data to disk in the 'target' dir for quicker recompilation
opt-level = 3
strip = "symbols"  # equivalent to strip = true
rpath = false  
debug-assertions = false
debug = false

[dependencies]
